--- a/Projects.html
+++ b/Projects.html
@@ -15,7 +15,8 @@
             <div id="left" class=" fonts5 k2d-regular">
                 <p > โปรเจค : การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
                     A Study on Greenhouse Automatic Control System Based on Wireless Sensor Network <br>
-                    การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นสูง
+                    การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นสูง<br>
+                    Tic-Tac-Toe<br>
                 </p>
             </div>
         </div>
