--- a/Contact.html
+++ b/Contact.html
@@ -28,10 +28,10 @@
             </div>
             <div class="container">
                 <div class="icons k2d-regular">
-                    <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Portfolio.html">Portfolio</a>
-                    <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Home.html">Home</a>
-                    <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Experience.html">Experience</a>
-                    <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Projects.html">Projects</a>
+                    <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
+                    <a href="https://perlight.github.io/Home.html">Home</a>
+                    <a href="https://perlight.github.io/Experience.html">Experience</a>
+                    <a href="https://perlight.github.io/Projects.html">Projects</a>
                 </div>
             </div>
         </div>
