--- a/Projects.html
+++ b/Projects.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 
 <head>
-    <title>Contact</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="styless.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -24,10 +24,10 @@
 
     <div class="container">
         <div class="icons k2d-regular">
-            <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Portfolio.html">Portfolio</a>
-            <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Home.html">Home</a>
-            <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Contact.html">Contact</a>
-            <a href="http://127.0.0.1:5500/Assignment-1-Web-Dev-Portfolio-Challenge/Projects.html">Projects</a>
+            <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
+            <a href="https://perlight.github.io/Home.html">Home</a>
+            <a href="https://perlight.github.io/Contact.html">Contact</a>
+            <a href="https://perlight.github.io/Projects.html">Projects</a>
         </div>
     </div>
     </div>
