--- a/Experience.html
+++ b/Experience.html
@@ -18,23 +18,23 @@
 
                 <div class="k2d-regular ">
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="ORA.png"> <br> โรงเรียน ยอแซฟอุปถัมภ์
+                        <img src="https://perlight.github.io/ORA.png"> <br> โรงเรียน ยอแซฟอุปถัมภ์
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="Swb.png"> <br> โรงเรียนสารสาสน์วิเทศบางบอน
+                        <img src="https://perlight.github.io/Swb.png"> <br> โรงเรียนสารสาสน์วิเทศบางบอน
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="witaedthon.png" style="width: 25%;"> <br> โรงเรียนสารสานสน์วิเทศธนบุรี
+                        <img src="https://perlight.github.io/witaedthon.png" style="width: 25%;"> <br> โรงเรียนสารสานสน์วิเทศธนบุรี
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="SW3.png" style="width: 25%;"> <br> โรงเรียนนวมินทราชินูทิศ สตรีวิทยา พุทธมณฑล
+                        <img src="https://perlight.github.io/SW3.png" style="width: 25%;"> <br> โรงเรียนนวมินทราชินูทิศ สตรีวิทยา พุทธมณฑล
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 25px;">
-                        <img src="ACT.png"> <br> โรงเรียนอัสสัมชัญธนบุรี
+                        <img src="https://perlight.github.io/ACT.png"> <br> โรงเรียนอัสสัมชัญธนบุรี
                     </div>
                 
                 <div class="fonts3 k2d-regular"> ฝึกงาน :
