--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,7 @@
         <div id="center">
 
             <div id="center" class="fonts1 k2d-regular glow">Home</div>
-            <div id="center"><img src="good.jpg" alt="image" style="width: 50%" /></div>
+            <div id="center"><img src="https://perlight.github.io/good.jpg" alt="image" style="width: 50%" /></div>
             <div>
                 <div id="center" class="fonts2 k2d-regular">ประวัติส่วนตัว</div>
                 <div id="left" class=" fonts5 k2d-regular">
