--- a/Projects.html
+++ b/Projects.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div >
         <div class="icons k2d-regular">
             <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
             <a href="https://perlight.github.io/Home.html">Home</a>
