--- a/Projects.html
+++ b/Projects.html
@@ -13,25 +13,24 @@
         <div class="fonts2 k2d-regular glow">Projects</div>
         <div>
             <div id="left" class=" fonts5 k2d-regular">
-                <p > โปรเจค : การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
+                <p> โปรเจค : การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
                     A Study on Greenhouse Automatic Control System Based on Wireless Sensor Network <br>
                     การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นสูง<br>
                     Tic-Tac-Toe<br>
                 </p>
             </div>
         </div>
-    </div>
-
-    <div >
-        <div class="icons k2d-regular">
-            <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
-            <a href="https://perlight.github.io/Home.html">Home</a>
-            <a href="https://perlight.github.io/Contact.html">Contact</a>
-            <a href="https://perlight.github.io/Projects.html">Projects</a>
+        <div class="container">
+            <div class="icons k2d-regular">
+                <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
+                <a href="https://perlight.github.io/Home.html">Home</a>
+                <a href="https://perlight.github.io/Contact.html">Contact</a>
+                <a href="https://perlight.github.io/Projects.html">Projects</a>
+            </div>
         </div>
     </div>
-    </div>
-    </div>
+
+   
 </body>
 </head>
 
