--- a/Projects.html
+++ b/Projects.html
@@ -10,27 +10,37 @@
 
 <body>
     <div id="center">
-        <div class="fonts2 k2d-regular glow">Projects</div>
+        <div class="fonts2 k2d-regular glow" style="margin-bottom: 30px;">Projects</div>
         <div>
             <div id="left" class=" fonts5 k2d-regular">
-                <p> โปรเจค : การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
-                    A Study on Greenhouse Automatic Control System Based on Wireless Sensor Network <br>
-                    การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นสูง<br>
-                    Tic-Tac-Toe<br>
-                </p>
-            </div>
-        </div>
-        <div class="container">
-            <div class="icons k2d-regular">
-                <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
-                <a href="https://perlight.github.io/Home.html">Home</a>
-                <a href="https://perlight.github.io/Contact.html">Contact</a>
-                <a href="https://perlight.github.io/Projects.html">Projects</a>
-            </div>
-        </div>
-    </div>
+                <div class="fonts5" style="margin-bottom: 20px;">
+                    โปรเจค : 
+                </div>
+                <div class="fonts4" style="margin-bottom: 20px;">การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น</div>
 
-   
+                <div class="fonts4" style="margin-bottom: 20px;">
+                    A Study on Greenhouse Automatic Control System Based on Wireless Sensor Network </div>
+                
+                    <div class="fonts4" style="margin-bottom: 20px;">
+                    การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นสูง
+
+                </div>
+
+                <div class="fonts4" style="margin-bottom: 20px;">
+                    Tic-Tac-Toe
+                </div>
+            </div>
+            <div class="container">
+                <div class="icons k2d-regular">
+                    <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
+                    <a href="https://perlight.github.io/Home.html">Home</a>
+                    <a href="https://perlight.github.io/Contact.html">Contact</a>
+                    <a href="https://perlight.github.io/Projects.html">Projects</a>
+                </div>
+            </div>
+        </div>
+
+
 </body>
 </head>
 
