--- a/Home.html
+++ b/Home.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <div class="icons k2d-regular">
                     <a
-                        href="https://perlight.github.io/Portfolio.html">Portfolio</a>
+                        href="https://perlight.github.io/Index.html">Portfolio</a>
                     <a
                         href="https://perlight.github.io/Experience.html">Experience</a>
                     <a href="https://perlight.github.io/Contact.html">Contact</a>
