--- a/Projects.html
+++ b/Projects.html
@@ -32,7 +32,7 @@
             </div>
             <div class="container">
                 <div class="icons k2d-regular">
-                    <a href="https://perlight.github.io/Portfolio.html">Portfolio</a>
+                    <a href="https://perlight.github.io/Index.html">Portfolio</a>
                     <a href="https://perlight.github.io/Home.html">Home</a>
                     <a href="https://perlight.github.io/Contact.html">Contact</a>
                     <a href="https://perlight.github.io/Projects.html">Projects</a>
