--- a/Projects.html
+++ b/Projects.html
@@ -35,7 +35,7 @@
                     <a href="https://perlight.github.io/Index.html">Portfolio</a>
                     <a href="https://perlight.github.io/Home.html">Home</a>
                     <a href="https://perlight.github.io/Contact.html">Contact</a>
-                    <a href="https://perlight.github.io/Projects.html">Projects</a>
+                    <a href="https://perlight.github.io/Experience.html">Experience</a>
                 </div>
             </div>
         </div>
