--- a/Experience.html
+++ b/Experience.html
@@ -26,31 +26,33 @@
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="https://perlight.github.io/witaedthon.png" style="width: 25%;"> <br> โรงเรียนสารสานสน์วิเทศธนบุรี
+                        <img src="https://perlight.github.io/witaedthon.png" style="width: 25%;"> <br>
+                        โรงเรียนสารสานสน์วิเทศธนบุรี
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="https://perlight.github.io/SW3.png" style="width: 25%;"> <br> โรงเรียนนวมินทราชินูทิศ สตรีวิทยา พุทธมณฑล
+                        <img src="https://perlight.github.io/SW3.png" style="width: 25%;"> <br> โรงเรียนนวมินทราชินูทิศ
+                        สตรีวิทยา พุทธมณฑล
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 25px;">
                         <img src="https://perlight.github.io/ACT.png"> <br> โรงเรียนอัสสัมชัญธนบุรี
                     </div>
-                
-                <div class="fonts3 k2d-regular"> ฝึกงาน :
+
+                    <div class="fonts3 k2d-regular"> ฝึกงาน :
+
+                    </div>
+                    <div class="fonts4 k2d-regular"> ได้เรียนรู้ตำแหน่งฝ่ายขายระบบหลังบ้านและ R&D</div>
+
+
+                    <div class="fonts3 k2d-regular">อบรม :
+
+                    </div>
+
+                    <div class="fonts4 k2d-regular"> อบรมการทำเว็บโดยใช้ Visul-studio </div><br>
 
                 </div>
-<div class="fonts4 k2d-regular"> ได้เรียนรู้ตำแหน่งฝ่ายขายระบบหลังบ้านและ R&D</div>
-                
-
-                <div class="fonts3 k2d-regular">อบรม :
-
-                </div>
-
-                <div class="fonts4 k2d-regular"> อบรมการทำเว็บโดยใช้ Visul-studio </div><br>
-
             </div>
-        </div>
             <div class="container">
                 <div class="icons k2d-regular">
                     <a href="https://perlight.github.io/Index.html">Portfolio</a>
