--- a/Home.html
+++ b/Home.html
@@ -15,13 +15,14 @@
         <div id="center">
 
             <div id="center" class="fonts1 k2d-regular glow">Home</div>
-            <div id="center"><img src="https://perlight.github.io/good.jpg" alt="image" style="width: 50%" /></div>
+            <div id="center"><img src="https://perlight.github.io/good.jpg" class="border" alt="image" style="width: 50%" /></div>
             <div>
                 <div id="center" class="fonts2 k2d-regular">ประวัติส่วนตัว</div>
                 <div id="left" class=" fonts5 k2d-regular">
-                    <p > ชื่อ : นางสาวญาดานันท์ พันธุ์รัศมีทอง <br> อายุ : 21 ปี<br>
+                    <p> ชื่อ : นางสาว ญาดานันท์ พันธุ์รัศมีทอง <br> อายุ : 21 ปี<br>
                         ว/ด/ป : 18 พฤษภาคม 2546 <br> สัญชาติ : ไทย <br> ศาสนา : พุทธ<br>
-                        ข้อดี : เรียนรู้ไว ข้อเสีย : ขี้ลืม <br>
+                        ข้อดี : เรียนรู้ไว<br>
+                        ข้อเสีย : ขี้ลืม <br>
                         ทักษะ : HTML, C++, G-code, Vegus-Pro V.19.0 <a
                             href="https://drive.google.com/drive/u/0/folders/1Ivwolmsi0Q1s5SLoLeB8-GiJCDoMHAXe">
                             <img style="width: 5%" src="VDOicon.png" /></a><br>
@@ -31,10 +32,8 @@
             </div>
             <div class="container">
                 <div class="icons k2d-regular">
-                    <a
-                        href="https://perlight.github.io/Index.html">Portfolio</a>
-                    <a
-                        href="https://perlight.github.io/Experience.html">Experience</a>
+                    <a href="https://perlight.github.io/Index.html">Portfolio</a>
+                    <a href="https://perlight.github.io/Experience.html">Experience</a>
                     <a href="https://perlight.github.io/Contact.html">Contact</a>
                     <a href="https://perlight.github.io/Projects.html">Projects</a>
                 </div>
