--- a/Index.html
+++ b/Index.html
@@ -19,7 +19,8 @@
                     <a href="https://perlight.github.io/Contact.html">Contact</a>
                     <a href="https://perlight.github.io/Projects.html">Projects</a>
                 </div>
-                <div id="center"><img src="https://perlight.github.io/Photo.jpeg" alt="image" style="width: 100%" /></div>
+                <div id="center"><img src="https://perlight.github.io/Photo.jpeg" class="border" alt="image" style="width: 100%" />
+                </div>
             </div>
         </div>
     </div>
