--- a/Home.html
+++ b/Home.html
@@ -15,7 +15,8 @@
         <div id="center">
 
             <div id="center" class="fonts1 k2d-regular glow">Home</div>
-            <div id="center"><img src="https://perlight.github.io/good.jpg" class="border" alt="image" style="width: 50%" /></div>
+            <div id="center"><img src="https://perlight.github.io/good.jpg" class="border" alt="image"
+                    style="width: 50%" /></div>
             <div>
                 <div id="center" class="fonts2 k2d-regular">ประวัติส่วนตัว</div>
                 <div id="left" class=" fonts5 k2d-regular">
@@ -26,7 +27,12 @@
                         ทักษะ : HTML, C++, G-code, Vegus-Pro V.19.0 <a
                             href="https://drive.google.com/drive/u/0/folders/1Ivwolmsi0Q1s5SLoLeB8-GiJCDoMHAXe">
                             <img style="width: 5%" src="VDOicon.png" /></a><br>
-                        โปรเจคที่เคยทำ : EEG ,
+                        โปรเจคที่เคยทำ : การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
+                        A Study on Greenhouse Automatic ControlSystem Based on Wireless Sensor Network<br> 
+                        Tic-Tac-Toe<br>
+                        DG-Smart farm<br>
+                        Eng 902 Speaking Assignment 2<br>
+                        Next Generation Lithium Ion Batteries Section 6<br>
                     </p>
                 </div>
             </div>
