--- a/Projects.html
+++ b/Projects.html
@@ -16,29 +16,47 @@
                 <div class="fonts5" style="margin-bottom: 20px;">
                     โปรเจค :
                 </div>
-                <div class="fonts4" style="margin-bottom: 20px;">การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น</div>
+                <div class="fonts4" style="margin-bottom: 20px;">
+                    การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น
+
+                </div>
 
                 <div class="fonts4" style="margin-bottom: 20px;">
-                    A Study on Greenhouse Automatic Control System Based on Wireless Sensor Network </div>
+                    A Study on Greenhouse Automatic Control System Based on Wireless Sensor Network
+                </div>
+
+                <div class="fonts4" style="margin-bottom: 20px;">
+                    Tic-Tac-Toe<a href="https://youtu.be/QiNReK8xJ6k"><img style="width: 5%" src="VDOicon.png" /></a>
+                </div>
+
+                <div class="fonts4" style="margin-bottom: 20px;">
+                    DG-Smart farm <a href="https://youtu.be/6CD3rxad7Ak"><img style="width: 5%;"
+                            src="VDOicon.png" /></a>
+                </div>
+
+                <div class="fonts4" style="margin-bottom: 20px;">
+                    Eng 902 Speaking Assignment 2 <a href="https://youtu.be/yvux2cPCexk"><img style="width: 5%;"
+                            src="VDOicon.png" /></a>
+
+                </div>
+
+                <div class="fonts4" style="margin-bottom: 20px;">Next Generation Lithium Ion Batteries Section 6 <a
+                        href="https://youtu.be/68WnVYz5dfk"><img style="width: 5%;" src="VDOicon.png" /></a>
+                </div>
 
                 <div class="fonts4" style="margin-bottom: 20px;">
                     การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นสูง
-
                 </div>
 
-                <div class="fonts4" style="margin-bottom: 20px;">
-                    Tic-Tac-Toe
+                <div class="container">
+                    <div class="icons k2d-regular">
+                        <a href="https://perlight.github.io/Index.html">Portfolio</a>
+                        <a href="https://perlight.github.io/Home.html">Home</a>
+                        <a href="https://perlight.github.io/Contact.html">Contact</a>
+                        <a href="https://perlight.github.io/Experience.html">Experience</a>
+                    </div>
                 </div>
             </div>
-            <div class="container">
-                <div class="icons k2d-regular">
-                    <a href="https://perlight.github.io/Index.html">Portfolio</a>
-                    <a href="https://perlight.github.io/Home.html">Home</a>
-                    <a href="https://perlight.github.io/Contact.html">Contact</a>
-                    <a href="https://perlight.github.io/Experience.html">Experience</a>
-                </div>
-            </div>
-        </div>
 
 
 </body>
