--- a/Contact.html
+++ b/Contact.html
@@ -28,7 +28,7 @@
             </div>
             <div class="container">
                 <div class="icons k2d-regular">
-                    <a href="https://perlight.github.io/Index.html">Portfolio</a>
+                    <a href="https://perlight.github.io/index.html">Portfolio</a>
                     <a href="https://perlight.github.io/Home.html">Home</a>
                     <a href="https://perlight.github.io/Experience.html">Experience</a>
                     <a href="https://perlight.github.io/Projects.html">Projects</a>
