--- a/Home.html
+++ b/Home.html
@@ -38,7 +38,7 @@
             </div>
             <div class="container">
                 <div class="icons k2d-regular">
-                    <a href="https://perlight.github.io/Index.html">Portfolio</a>
+                    <a href="https://perlight.github.io/index.html">Portfolio</a>
                     <a href="https://perlight.github.io/Experience.html">Experience</a>
                     <a href="https://perlight.github.io/Contact.html">Contact</a>
                     <a href="https://perlight.github.io/Projects.html">Projects</a>
