--- a/Projects.html
+++ b/Projects.html
@@ -50,7 +50,7 @@
 
                 <div class="container">
                     <div class="icons k2d-regular">
-                        <a href="https://perlight.github.io/Index.html">Portfolio</a>
+                        <a href="https://perlight.github.io/index.html">Portfolio</a>
                         <a href="https://perlight.github.io/Home.html">Home</a>
                         <a href="https://perlight.github.io/Contact.html">Contact</a>
                         <a href="https://perlight.github.io/Experience.html">Experience</a>
