--- a/Home.html
+++ b/Home.html
@@ -27,7 +27,8 @@
                         ทักษะ : HTML, C++, G-code, Vegus-Pro V.19.0 <a
                             href="https://drive.google.com/drive/u/0/folders/1Ivwolmsi0Q1s5SLoLeB8-GiJCDoMHAXe">
                             <img style="width: 5%" src="VDOicon.png" /></a><br>
-                        โปรเจคที่เคยทำ : การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
+                        โปรเจคที่เคยทำ : <br>
+                        การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
                         A Study on Greenhouse Automatic ControlSystem Based on Wireless Sensor Network<br> 
                         Tic-Tac-Toe<br>
                         DG-Smart farm<br>
