--- a/Home.html
+++ b/Home.html
@@ -28,12 +28,12 @@
                             href="https://drive.google.com/drive/u/0/folders/1Ivwolmsi0Q1s5SLoLeB8-GiJCDoMHAXe">
                             <img style="width: 5%" src="VDOicon.png" /></a><br>
                         โปรเจคที่เคยทำ : <br>
-                        การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
-                        A Study on Greenhouse Automatic ControlSystem Based on Wireless Sensor Network<br> 
-                        Tic-Tac-Toe<br>
-                        DG-Smart farm<br>
-                        Eng 902 Speaking Assignment 2<br>
-                        Next Generation Lithium Ion Batteries Section 6<br>
+                        -การตรวจคลื่นสมองไฟฟ้า(EEG)ขั้นต้น<br>
+                        -A Study on Greenhouse Automatic ControlSystem Based on Wireless Sensor Network<br> 
+                        -Tic-Tac-Toe<br>
+                        -DG-Smart farm<br>
+                        -Eng 902 Speaking Assignment 2<br>
+                        -Next Generation Lithium Ion Batteries Section 6<br>
                     </p>
                 </div>
             </div>
