--- a/Experience.html
+++ b/Experience.html
@@ -10,7 +10,7 @@
 
 <body>
     <div id="center">
-        <div id="center">
+        <div id="center" >
             <div id="center" class="fonts1 k2d-regular glow">Experience</div>
             <div>
                 <div id="center" class="fonts2 k2d-regular">ประสบการณ์</div>
@@ -18,11 +18,13 @@
 
                 <div class="k2d-regular ">
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="https://perlight.github.io/ORA.png"> <br> โรงเรียน ยอแซฟอุปถัมภ์
+                        <img src="https://perlight.github.io/ORA.png"> <br> 
+                        โรงเรียน ยอแซฟอุปถัมภ์
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 10px;">
-                        <img src="https://perlight.github.io/Swb.png"> <br> โรงเรียนสารสาสน์วิเทศบางบอน
+                        <img src="https://perlight.github.io/Swb.png"> <br> 
+                        โรงเรียนสารสาสน์วิเทศบางบอน
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 10px;">
@@ -36,23 +38,30 @@
                     </div>
 
                     <div class="fonts4" style="margin-bottom: 25px;">
-                        <img src="https://perlight.github.io/ACT.png"> <br> โรงเรียนอัสสัมชัญธนบุรี
+                        <img src="https://perlight.github.io/ACT.png"> <br> 
+                        โรงเรียนอัสสัมชัญธนบุรี
                     </div>
 
-                    <div class="fonts3 k2d-regular"> ฝึกงาน :
-
-                    </div>
-                    <div class="fonts4 k2d-regular"> ได้เรียนรู้ตำแหน่งฝ่ายขายระบบหลังบ้านและ R&D</div>
-
-
-                    <div class="fonts3 k2d-regular">อบรม :
-
+                    <div class="fonts3 k2d-regular"> 
+                        ฝึกงาน :
                     </div>
 
-                    <div class="fonts4 k2d-regular"> อบรมการทำเว็บโดยใช้ Visul-studio </div><br>
+                    <div class="fonts4 k2d-regular" style="margin-bottom: 25px;"> 
+                        ได้เรียนรู้ตำแหน่งฝ่ายขายระบบหลังบ้านและ R&D
+                    </div>
+
+
+                    <div class="fonts3 k2d-regular">
+                        อบรม :
+                    </div>
+
+                    <div class="fonts4 k2d-regular" style="margin-bottom: 25px;"> 
+                        อบรมการทำเว็บโดยใช้ Visul-studio 
+                    </div>
 
                 </div>
             </div>
+
             <div class="container">
                 <div class="icons k2d-regular">
                     <a href="https://perlight.github.io/index.html">Portfolio</a>
@@ -63,6 +72,17 @@
             </div>
         </div>
     </div>
+
+    <script>
+        waitload.style.display = "none";
+        function hideElementAfterDelay(elementId) {
+            setTimeout(function () {
+                document.getElementById(elementId).style.display = 'none';
+                waitload.style.display = "block";
+            }, 2000);
+        }
+        hideElementAfterDelay('loadsection');
+    </script>
 </body>
 </head>
 
